[package]
name = "show-option"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_format = { version = "2.0.0", optional = true }

[dev-dependencies]
lazy_format = "2.0.0"

[features]
default = ["macro"]
macro = ["dep:lazy_format"]
