[package]
name = "show-option"
version = "0.2.0"
edition = "2021"

description = "Library for displaying Options"
license = "MIT"
homepage = "https://github.com/kriomant/show-option"
repository = "https://github.com/kriomant/show-option.git"
documentation = "https://docs.rs/show-option"

[dependencies]
lazy_format = { version = "2.0.0", optional = true }

[dev-dependencies]
lazy_format = "2.0.0"

[features]
default = ["macro"]
macro = ["dep:lazy_format"]
